minor bug fix for alignfull.

--- a/styles/index.css
+++ b/styles/index.css
@@ -307,4 +307,6 @@
   max-width: 100%;
   margin-right: 0;
   margin-left: 0;
+  left: 0px;
+  right: 0px;
 }
